secret.propreties updated

--- a/src/secret.properties
+++ b/src/secret.properties
@@ -1,9 +1,9 @@
 # it will help us to keep all the secret information example: userName.Password, URL
 
 MYSQLJDBC.driver = com.mysql.cj.jdbc.Driver
-MYSQLJDBC.url = jdbc:mysql://localhost:3306/PNT?serverTimezone=UTC&useSSL=false
+MYSQLJDBC.url = jdbc:mysql://localhost:3306/HassanDB?serverTimezone=UTC&useSSL=false
 MYSQLJDBC.userName = root
-MYSQLJDBC.password = Rootroot1234567
+MYSQLJDBC.password = elhacen27
 
 
 
