--- a/src/secret.properties
+++ b/src/secret.properties
@@ -3,7 +3,7 @@
 MYSQLJDBC.driver = com.mysql.cj.jdbc.Driver
 MYSQLJDBC.url = jdbc:mysql://localhost:3306/HassanDB?serverTimezone=UTC&useSSL=false
 MYSQLJDBC.userName = root
-MYSQLJDBC.password = elhacen27
+MYSQLJDBC.password = hassan1983
 
 
 
